test/corpus/django_expressions.txt
==================
Simple variable
==================

<root>{{ name }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name))))
    (end_tag
      (name))))

==================
Dotted variable
==================

<root>{{ user.profile.name }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name))))
    (end_tag
      (name))))

==================
Variable with filter
==================

<root>{{ name|lower }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)
          (dj_filter
            (dj_filter_name)))))
    (end_tag
      (name))))

==================
Variable with filter and argument
==================

<root>{{ value|default:0 }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)
          (dj_filter
            (dj_filter_name)
            (dj_number)))))
    (end_tag
      (name))))

==================
Variable with filter and dotted argument
==================

<root>{{ value|default:obj.attr }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)
          (dj_filter
            (dj_filter_name)
            (dj_filter_argument)))))
    (end_tag
      (name))))

==================
Variable with quoted filter argument
==================

<root>{{ value|default:"fallback" }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)
          (dj_filter
            (dj_filter_name)
            (dj_filter_argument)))))
    (end_tag
      (name))))

==================
Variable with chained filters
==================

<root>{{ name|lower|truncatechars:50 }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)
          (dj_filter
            (dj_filter_name))
          (dj_filter
            (dj_filter_name)
            (dj_number)))))
    (end_tag
      (name))))

==================
String literal expression
==================

<root>{{ "hello" }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_string)))
    (end_tag
      (name))))

==================
String with filter
==================

<root>{{ "hello"|upper }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_string
          (dj_filter
            (dj_filter_name)))))
    (end_tag
      (name))))

==================
Expression in attribute value
==================

<root class="{{ active_class }}"/>

---

(document
  (element
    (self_closing_tag
      name: (name)
      (attribute
        name: (name)
        value: (att_value
          (dj_variable_expr
            (dj_variable
              (dj_variable_name))))))))

==================
Expression mixed with text in attribute
==================

<root class="item {{ extra }}"/>

---

(document
  (element
    (self_closing_tag
      name: (name)
      (attribute
        name: (name)
        value: (att_value
          (dj_variable_expr
            (dj_variable
              (dj_variable_name))))))))

==================
Expression surrounded by text in attribute
==================

<img imageName="{{ asset_root }}/octopus-energy-germany/arrow-right-long.svg"/>

---

(document
  (element
    (self_closing_tag
      name: (name)
      (attribute
        name: (name)
        value: (att_value
          (dj_variable_expr
            (dj_variable
              (dj_variable_name))))))))

==================
Multiple expressions in content
==================

<root>{{ a }} {{ b }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)))
      (dj_variable_expr
        (dj_variable
          (dj_variable_name))))
    (end_tag
      (name))))

==================
Expression surrounded by text in content
==================

<td>Amount for {{ charge.description }}</td>

---

(document
  (element
    (start_tag
      (name))
    (content
      (char_data)
      (dj_variable_expr
        (dj_variable
          (dj_variable_name))))
    (end_tag
      (name))))

==================
Multiple expressions surrounded by text in content
==================

<p>{{ greeting }}, {{ user.name }}! You owe {{ amount|floatformat:2 }}.</p>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)))
      (char_data)
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)))
      (char_data)
      (dj_variable_expr
        (dj_variable
          (dj_variable_name)
          (dj_filter
            (dj_filter_name)
            (dj_number))))
      (char_data))
    (end_tag
      (name))))

==================
Negative integer filter argument
==================

<root>{{ value|floatformat:-2 }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (variable
          (variable_name)
          (filter
            (filter_name)
            (number)))))
    (end_tag
      (name))))

==================
Negative float filter argument
==================

<root>{{ value|multiply:-1.5 }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (variable
          (variable_name)
          (filter
            (filter_name)
            (number)))))
    (end_tag
      (name))))

==================
Bare integer literal expression
==================

<root>{{ 0 }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (number_expr
          (number))))
    (end_tag
      (name))))

==================
Integer literal with filter and argument
==================

<root>{{ 0|spanish_number:2 }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (number_expr
          (number)
          (filter
            (filter_name)
            (number)))))
    (end_tag
      (name))))

==================
Negative integer literal with filter
==================

<root>{{ -1|multiply:-1 }}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_variable_expr
        (number_expr
          (number)
          (filter
            (filter_name)
            (number)))))
    (end_tag
      (name))))
