test/corpus/django_statements.txt
==================
Unpaired statement - csrf_token
==================

<root>{% csrf_token %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_unpaired_statement
        (dj_tag_name)))
    (end_tag
      (name))))

==================
Unpaired statement - extends
==================

<root>{% extends "base.xml" %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_unpaired_statement
        (dj_tag_name)
        (dj_string)))
    (end_tag
      (name))))

==================
Unpaired statement - include
==================

<root>{% include "partial.xml" with var="val" only %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_unpaired_statement
        (dj_tag_name)
        (dj_string)
        (dj_keyword)
        (dj_assignment
          (dj_assignment_target)
          (dj_string))
        (dj_keyword)))
    (end_tag
      (name))))

==================
Unpaired statement - load
==================

<root>{% load i18n %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_unpaired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))))
    (end_tag
      (name))))

==================
if statement
==================

<root>{% if active %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
if/else statement
==================

<root>{% if active %}<a/>{% else %}<b/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_branch_statement
          (dj_tag_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
if/elif/else statement
==================

<root>{% if a %}<x/>{% elif b %}<y/>{% else %}<z/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_branch_statement
          (dj_tag_name)
          (dj_variable
            (dj_variable_name)))
        (element
          (self_closing_tag
            (name)))
        (dj_branch_statement
          (dj_tag_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
for statement
==================

<root>{% for item in items %}<item/>{% endfor %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_keyword_operator)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
for/empty statement
==================

<root>{% for item in items %}<item/>{% empty %}<none/>{% endfor %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_keyword_operator)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_branch_statement
          (dj_tag_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
block statement
==================

<root>{% block content %}<p>text</p>{% endblock %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_block_name)
        (element
          (start_tag
            (name))
          (content
            (char_data))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
block statement with hyphenated name
==================

<root>{% block my-block %}<p>text</p>{% endblock my-block %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_block_name)
        (element
          (start_tag
            (name))
          (content
            (char_data))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_block_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
block statement with dotted name
==================

<root>{% block first_page.logo %}<p>text</p>{% endblock first_page.logo %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_block_name)
        (element
          (start_tag
            (name))
          (content
            (char_data))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_block_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
block statement with plus in name
==================

<root>{% block page_2+_header %}<p>text</p>{% endblock page_2+_header %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_block_name)
        (element
          (start_tag
            (name))
          (content
            (char_data))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_block_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
with statement
==================

<root>{% with x=value %}{{ x }}{% endwith %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_assignment
          (dj_assignment_target)
          (dj_variable
            (dj_variable_name)))
        (dj_variable_expr
          (dj_variable
            (dj_variable_name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
with statement - assignment value types
==================

<root>{% with x=7 y="text" z=val|length %}{% endwith %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_assignment
          (dj_assignment_target)
          (dj_number_expr
            (dj_number)))
        (dj_assignment
          (dj_assignment_target)
          (dj_string))
        (dj_assignment
          (dj_assignment_target)
          (dj_variable
            (dj_variable_name)
            (dj_filter
              (dj_filter_name))))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
with statement - number expression assignment value
==================

<root>{% with x=7|add:1 %}{% endwith %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_assignment
          (dj_assignment_target)
          (dj_number_expr
            (dj_number)
            (dj_filter
              (dj_filter_name)
              (dj_number))))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
autoescape statement
==================

<root>{% autoescape off %}<p>{{ value }}</p>{% endautoescape %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_keyword)
        (element
          (start_tag
            (name))
          (content
            (dj_variable_expr
              (dj_variable
                (dj_variable_name))))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
spaceless statement
==================

<root>{% spaceless %}<p> text </p>{% endspaceless %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (element
          (start_tag
            (name))
          (content
            (char_data))
          (end_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
Django comment
==================

<root>{# this is a comment #}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_unpaired_comment))
    (end_tag
      (name))))

==================
Nested for inside if
==================

<root>{% if show %}{% for x in xs %}<i/>{% endfor %}{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_paired_statement
          (dj_tag_name)
          (dj_variable
            (dj_variable_name))
          (dj_keyword_operator)
          (dj_variable
            (dj_variable_name))
          (element
            (self_closing_tag
              (name)))
          (dj_tag_name)
          (dj_end_paired_statement))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
if with comparison operator
==================

<root>{% if count > 0 %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_operator)
        (dj_number_expr
          (dj_number))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
if with keyword operator
==================

<root>{% if user not in banned_list %}<ok/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_keyword_operator)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
Variable name with keyword prefix is not split by lexer
==================

<root>{% if android %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
Variable name with keyword substring not at prefix is not split (coffer)
==================

<root>{% if coffer %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
Variables with keyword prefixes in compound condition are not split (cannot, intercept)
==================

<root>{% if cannot intercept %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
Variable with keyword prefix after keyword operator is not split (not intercept)
==================

<root>{% if not intercept %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_keyword_operator)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
Variable name starting with boolean prefix is not split (Falsetto)
==================

<root>{% if Falsetto %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
keyword with no trailing whitespace before closing tag
==================

<root>{% autoescape on%}<p/>{% endautoescape %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_keyword)
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
keyword at end of unpaired statement with no trailing whitespace
==================

<root>{% include "x.html" only%}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_unpaired_statement
        (dj_tag_name)
        (dj_string)
        (dj_keyword)))
    (end_tag
      (name))))

==================
boolean with no trailing whitespace before closing tag
==================

<root>{% if True%}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_boolean)
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
Statement at document level
==================

{% extends "base.xml" %}
<root/>

---

(document
  (dj_unpaired_statement
    (dj_tag_name)
    (dj_string))
  (element
    (self_closing_tag
      (name))))

==================
if with negative number comparison
==================

<root>{% if count > -1 %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_operator)
        (dj_number_expr
          (dj_number))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))

==================
if with underscore digit separator in number
==================

<root>{% if amount > 300_00 %}<item/>{% endif %}</root>

---

(document
  (element
    (start_tag
      (name))
    (content
      (dj_paired_statement
        (dj_tag_name)
        (dj_variable
          (dj_variable_name))
        (dj_operator)
        (dj_number_expr
          (dj_number))
        (element
          (self_closing_tag
            (name)))
        (dj_tag_name)
        (dj_end_paired_statement)))
    (end_tag
      (name))))
